<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/LoginActivityLayout"
        android:background="#D3D3D3" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="-8dp">

    <ImageView
            android:id="@+id/pokeLogo"
            android:src="@drawable/pokelogo"
            android:layout_width="144dp"
            android:layout_height="139dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.079"
            app:layout_constraintHorizontal_bias="0.498"
            android:contentDescription="@string/Pokeball" android:layout_marginBottom="545dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/help"
            android:id="@+id/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.39"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.579"
            android:hint="@string/usuario"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="408dp"
            app:layout_constraintTop_toBottomOf="@+id/pokeLogo"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:boxBackgroundColor="#FFFFFF">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace" tools:layout_editor_absoluteY="199dp"
                tools:layout_editor_absoluteX="45dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:endIconMode="password_toggle"
            android:hint="@string/password"
            app:boxBackgroundColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txtInputUsername" app:layout_constraintHorizontal_bias="1.0">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="serif-monospace"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/iniciarSesion"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:id="@+id/inicioSesion"
            android:backgroundTint="@color/pokeball"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintVertical_bias="0.564"/>
    <View
            android:id="@+id/lineaDivisora1"
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="468dp" app:layout_constraintHorizontal_bias="0.313"/>
    <Button
            android:text="@string/sesionGoogle"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:id="@+id/sesionGoogle"
            android:backgroundTint="@color/white"
            android:textColor="@color/pokeball"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/sesionFacebook" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintVertical_bias="0.034"/>
    <Button
            android:text="@string/sesionFacebook"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:id="@+id/sesionFacebook"
            android:backgroundTint="@color/white"
            android:textColor="@color/pokeball"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/lineaDivisora1" app:layout_constraintHorizontal_bias="0.495"/>
    <View
            android:id="@+id/lineaDivisora2"
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintVertical_bias="0.142"
            app:layout_constraintTop_toBottomOf="@id/sesionGoogle"/>
    <Button
            android:text="@string/registro"
            android:layout_width="135dp"
            android:layout_height="65dp"
            android:id="@+id/registro"
            android:backgroundTint="@color/pokeball"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/paswordReset" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineaDivisora2" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.36" android:layout_marginStart="30dp"/>
    <Button
            android:text="@string/reseteoPassword"
            android:layout_width="135dp"
            android:layout_height="65dp"
            android:id="@+id/paswordReset"
            android:backgroundTint="@color/pokeball"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineaDivisora2" android:layout_marginEnd="28dp"
            app:layout_constraintVertical_bias="0.36"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/poketext" android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/pokeLogo"
            app:layout_constraintBottom_toTopOf="@+id/txtInputUsername" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>